--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <section id="hero" class="hero-section">
             <div class="container">
-                <h1>Velo Boss - Ваш надежный партнер по велосипедам и ёлкам!</h1>
+                <h1>Велыч 69 - Ваш надежный партнер по велосипедам и ёлкам!</h1>
                 <p>Широкий ассортимент, выгодные цены, доставка по Твери и области.</p>
                 <a href="#bicycles" class="btn primary-btn">Выбрать велосипед</a>
                 <a href="#firs-retail" class="btn secondary-btn">Купить ёлку</a>
